Almost finish styles of Navbar component

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,8 +4,8 @@ $main_bg: #302c42;
 
 // Linear Gradients (lg) & Radial Gradients (rg):
 // bg -> background
-$_linear_gradient_one: #8176af;
-$_linear_gradient_two: #c0b7e8;
+$linear_gradient_one: #8176af;
+$linear_gradient_two: #c0b7e8;
 $bg_radial_gradient_one: #433d60;
 $bg_radial_gradient_two: #3a3456f2;
 $bg_radial_gradient_three: #211e2e;
