--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,5 +1,91 @@
 @use "../../styles/vars" as *;
 @use "../../styles/mixins" as *;
-.navbar{
-  
+.navbar {
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: $text_color;
+  .hydra {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    img {
+      width: 100px;
+      height: 100px;
+    }
+    h1 {
+      font-weight: 400;
+      transform: scale(1, 2.4);
+      // To apply linear-gradient property on text:
+      background: linear-gradient(
+        180deg,
+        $linear_gradient_two 50%,
+        $linear_gradient_one 100%
+      );
+      background-size: 100%;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -moz-text-fill-color: transparent;
+    }
+  }
+
+  .pages {
+    display: flex;
+    gap: 3rem;
+    font-weight: bold;
+    a {
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .buttons {
+    display: flex;
+    gap: 3rem;
+    button {
+      text-transform: uppercase;
+      border-radius: 40px;
+      padding: 1rem 3rem;
+      background-color: transparent;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      transition: $fast_transition;
+      &:first-child {
+        background-color: transparent;
+        color: $text_color;
+        border: 2px solid $text_color;
+
+        &:hover {
+          color: $main_bg;
+          background: linear-gradient(
+            270deg,
+            $linear_gradient_one 0%,
+            $linear_gradient_two 100%
+          );
+        }
+      }
+      &:last-child {
+        color: $main_bg;
+        background: linear-gradient(
+          90deg,
+          $linear_gradient_one 0%,
+          $linear_gradient_two 100%
+        );
+
+        &:hover {
+          color: $text_color;
+          background: linear-gradient(
+            -90deg,
+            $linear_gradient_one 0%,
+            $linear_gradient_two 100%
+          );
+        }
+      }
+    }
+  }
 }
