--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Playfair Display", serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #302c42;
   margin: 2rem 10rem;
 }
