--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -13,3 +13,7 @@ $bg_radial_gradient_three: #211e2e;
 // Transitions:
 $fast_transition: 0.2s;
 $slow_transition: 0.5s;
+
+// Line Heights:
+$narrow_line_height:1.4;
+$wide_line_height:1.8;
